# T-bitak-2209a

./: .gitignore  CUSTOM_TRAINING.md  MOSSE_OPTIMIZE_REHBER.md  PROJECT_SUMMARY.md  QUICKSTART.md  SORUN_ÇÖZÜMÜ.md  requirements.txt  run.bat  run_mosse_fast.bat  test_hizli.bat  test_system.py  train_custom_model.py  İYİLEŞTİRMELER.md
hybrid_tracker/: ARCHITECTURE.md  INDEX.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  install.sh  package.xml  setup.cfg  setup.py
hybrid_tracker/config/: tracker_params.yaml
hybrid_tracker/hybrid_tracker/: __init__.py  hybrid_tracker_node.py
hybrid_tracker/hybrid_tracker/controllers/: __init__.py  pid_controller.py
hybrid_tracker/hybrid_tracker/vision/: __init__.py  ros_detector.py  ros_kalman_filter.py  ros_robust_tracker.py  ros_tracker.py
hybrid_tracker/launch/: tracking.launch.py
prototypes/: BAŞLARKEN.md  DOKUMANTASYON_INDEKSI.md  GORUNTU_BULANIKLIK_COZUM.md  README.md  SISTEM_DOKUMANTASYONU.md  TECHNICAL.md  TEST_REHBERİ.md  analiz_testler.py  detector.py  install.bat  main_mosse_fast.py  mosse_optimized.py
prototypes/testler/test-1/: ÖZET.txt
prototypes/testler/test-2/: ÖZET.txt
prototypes/testler/test-3/: ÖZET.txt
prototypes/testler/test-4/: test_results.json  ÖZET.txt
src/: config.py  kalman_filter.py  main.py  robust_tracker.py  screen_capture.py  test_logger.py  tracker.py
testler/test-1/: test_results.json
testler/test-2/: test_results.json
testler/test-3/: test_results.json
testler/test-5/: test_results.json  ÖZET.txt
testler/test-6/: ÖZET.txt
testler/test-7/: test_results.json  ÖZET.txt
(+1 files in other folders)
